# AI_Powered_Code_Reviewer_And_Quality_Assistant

./: .gitignore  .pre-commit-config.yaml  AI Powered Project-Documentation.docx  README.md  ci_history.json  last_snapshot.json  pyproject.toml  report.json  requirements.txt  review_history.db  streamlit_app.py
.github/workflows/: ci.yml  review.yml
codeguard_pro/: cli.py
codeguard_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codeguard_pro/ci/: coverage_engine.py  diff_engine.py  gatekeeper.py  snapshot.py  trend_tracker.py
codeguard_pro/core/: ai_generator.py  analyzer.py  config.py  dashboard_data.py  dashboard_engine.py  diff_engine.py  docstring_applier.py  docstring_coverage.py  docstring_generator.py  docstring_styles.py  docstring_validator.py  groq_generator.py  metrics.py  parser.py  project_scanner.py  quality_validator.py  reporter.py  review_logger.py  sample_a.py
codeguard_pro/database/: db.py
codeguard_pro/github/: pr_comment.py
storage/: review_logs.json
tests/: test_coverage.py  test_validator.py
