[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard-pro"
version = "1.0.0"
description = "AI-Powered Code Review & Docstring Intelligence Tool"
authors = [{ name = "Aman Gupta" }]
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "radon",
    "matplotlib",
    "pytest",
    "groq"
]

[project.scripts]
codeguard = "codeguard_pro.cli:main"

[tool.ai_reviewer]
coverage_threshold = 85
max_complexity = 15
min_maintainability = 60
exclude = ["venv", "__pycache__", ".git"]
docstring_style = "google"

[tool.codeguard_pro]
coverage_threshold = 85
docstring_style = "google"
severity = "medium"
auto_fix = true
exclude_paths = ["venv", "__pycache__", ".git"]